# uav-control

./: Dockerfile  README.md  docker-compose.yml  flight_test.py
src/tello_control/: package.xml  setup.py
src/tello_control/launch/: tello_launch.py
src/tello_control/tello_control/: drone_connector.py  mission_planner.py  object_detector.py  telemetry_monitor.py
